feat: add skills section and footer

--- a/sytle.css
+++ b/sytle.css
@@ -35,3 +35,29 @@ h2 {
 .text_indent {
   text-indent: 30px;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  border-top: 3px solid rgb(165, 165, 165);
+}
+
+.github_lg,
+.rss_lg,
+.date_footer {
+  margin: 0 15px;
+}
+
+.github_lg {
+  width: 30px;
+}
+
+.rss_lg {
+  width: 100px;
+}
+
+.date_footer {
+  font-weight: 900;
+}
