--- a/sytle.css
+++ b/sytle.css
@@ -23,13 +23,19 @@ h2 {
 
 .photo {
   float: right;
-  width: 190px;
+  width: 170px;
   margin-top: 30px;
 }
 
 .contacts {
   padding: 0;
   list-style: none;
+}
+
+.objective p {
+  font-size: 20px;
+  font-weight: 900;
+  text-decoration: underline;
 }
 
 .text_indent {
