--- a/sytle.css
+++ b/sytle.css
@@ -5,7 +5,8 @@ body {
 }
 
 .container {
-  max-width: 70%;
+  max-width: 1030px;
+  min-width: 700px;
   padding: 20px 50px;
   margin: 20px auto;
   background-color: beige;
