--- a/css/header.css
+++ b/css/header.css
@@ -5,8 +5,7 @@ header {
 nav {
   border-bottom: 1px solid;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 1.4px;
   transition: 0.4s;
 }
