--- a/css/media-query.css
+++ b/css/media-query.css
@@ -7,13 +7,18 @@
     position: absolute;
     top: -500px;
     right: 0;
+    padding: 5px 35px 15px;
+    background: rgb(248 201 80 / 85%);
     border-bottom: none;
   }
 
+  .nav-header {
+    display: block;
+  }
+  
   .nav-items {
     display: block;
-    padding: 35px;
-    background: rgb(248 201 80 / 85%);
+    padding: 0;
   }
 
   .nav-item {
@@ -96,11 +101,10 @@
 @media all and (max-width: 438px) {
   nav {
     left: 0;
-    width: 100%;
   }
 
   .nav-hidden {
-    top: 111px;
+    top: 127px;
   }
 }
 
@@ -115,7 +119,7 @@
   }
 
   .nav-hidden {
-    top: 103px;
+    top: 119px;
   }
 
   .github_lg,
