--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,7 @@
+.nav-container{
+  position: relative;
+}
+
 header {
   margin-top: 30px;
 }
@@ -10,8 +14,15 @@ nav {
   transition: 0.4s;
 }
 
+.nav-header {
+  display: none;
+  margin: 15px 0 10px 5px;
+  color: #0000005c;
+}
+
 .nav-hidden {
  top: 86px;
+ opacity: 1;
 }
 
 .bg-nav {
@@ -26,12 +37,11 @@ nav {
 }
 
 .nav-item {
-  padding: 5px;
-  margin: 5px;
   list-style: none;
 }
 
 .nav-item a {
+  padding: 5px;
   text-decoration: none;
   color: black;
   transition: 0.4s;
