--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,4 @@
-.pos-nav {
-  position: relative;
-}
-
-.burger-wrap {
+.wrap-h1-burger {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -16,17 +12,12 @@ h1 {
   border-bottom: 3px solid rgb(165, 165, 165);
 }
 
-.nav-header {
-  display: none;
-  margin: 15px 0 10px 5px;
-  color: #0000005c;
-}
-
 .burger__menu {
   display: none;
   margin: 10px;
   cursor: pointer;
   transition: 0.4s;
+  z-index: 999;
 }
 
 .burger__menu span {
@@ -75,7 +66,6 @@ h1 {
   margin: 10px;
 }
 
-
 .objective-section p {
   font-size: 20px;
   font-weight: 900;
@@ -84,6 +74,38 @@ h1 {
 
 .text_indent {
   text-indent: 30px;
+}
+
+.project-wrap {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.project-item {
+  display: block;
+  width: 380px;
+  height: 190px;
+  margin: 15px 5px;
+  border: 1px solid black;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: 0.4s;
+  filter: grayscale(100%) brightness(0.4);
+}
+
+.project-one {
+  background-image: url("../media/project1.png");
+}
+
+.project-two {
+  background-image: url("../media/project2.png");
+}
+
+.project-item:hover {
+  transform: scale(1.2);
+  filter: none;
+  z-index: 99;
 }
 
 .code-example {
