--- a/css/media-query.css
+++ b/css/media-query.css
@@ -1,21 +1,24 @@
-@media all and (max-width: 895px) {
+@media all and (max-width: 915px) {
   h1 {
-    border-bottom: none
+    border-bottom: none;
+    text-shadow: 0px 5px 5px #676767;
   }
 
   nav {
     position: absolute;
-    top: -500px;
+    top: -460px;
     right: 0;
-    padding: 5px 35px 15px;
+    padding: 5px 45px 15px;
     background: rgb(248 201 80 / 85%);
     border-bottom: none;
+    opacity: 0;
+    box-shadow: 0px 12px 20px 0px rgb(58 58 58 / 50%);
   }
 
   .nav-header {
     display: block;
   }
-  
+
   .nav-items {
     display: block;
     padding: 0;
@@ -40,7 +43,7 @@
     text-shadow: 0px 0px 10px rgb(255 255 255);
   }
 
-  .burger-wrap {
+  .wrap-h1-burger {
     margin: 20px 0;
     border-bottom: 3px solid rgb(165, 165, 165);
   }
@@ -48,7 +51,6 @@
   .burger__menu {
     display: block;
   }
-
 }
 
 @media all and (max-width: 760px) {
@@ -64,7 +66,7 @@
     font-size: 33px;
   }
 
-  .burger-wrap {
+  .wrap-h1-burger {
     margin-bottom: 20px;
   }
 
@@ -96,6 +98,10 @@
   .photo {
     margin: 0 auto;
   }
+
+  .project-item:hover {
+    transform: none;
+  }
 }
 
 @media all and (max-width: 438px) {
@@ -106,10 +112,14 @@
   .nav-hidden {
     top: 127px;
   }
+
+  .project-item {
+    width: 260px;
+    height: 130px;
+  }
 }
 
 @media all and (max-width: 360px) {
-
   h1 {
     font-size: 30px;
   }
