--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,8 @@ h1 {
   text-indent: 30px;
 }
 
+/* ........................... */
+
 .project-wrap {
   display: flex;
   justify-content: space-evenly;
@@ -83,30 +85,78 @@ h1 {
 }
 
 .project-item {
-  display: block;
-  width: 380px;
-  height: 190px;
+  position: relative;
+  width: 290px;
+  height: 200px;
+  box-sizing: border-box;
   margin: 15px 5px;
-  border: 1px solid black;
-  background-size: contain;
+  border: 4px solid #beb8b8;
+  background-size: cover;
+  background-position-x: 50%;
   background-repeat: no-repeat;
+  box-shadow: 0px 0px 25px 3px rgb(0 0 0 / 50%);
   transition: 0.4s;
-  filter: grayscale(100%) brightness(0.4);
+}
+
+.project-item-ref {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+}
+
+.project-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  color: wheat;
+  font-weight: 700;
+  line-height: 1.7;
+  background-color: rgb(11 114 120 / 90%);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.4s;
+}
+
+.project-item:hover .project-description {
+  height: 100%;
+  visibility: visible;
+  opacity: 1;
+}
+
+.project-description-name {
+  text-decoration: underline;
 }
 
 .project-one {
-  background-image: url("../media/project1.png");
+  background-image: url("../media/project1.jpg");
 }
 
 .project-two {
-  background-image: url("../media/project2.png");
+  background-image: url("../media/project2.jpg");
 }
 
-.project-item:hover {
-  transform: scale(1.2);
-  filter: none;
-  z-index: 99;
+.project-three {
+  background-image: url("../media/project3.jpg");
 }
+
+.project-four {
+  background-image: url("../media/project4.jpg");
+}
+
+
+/* ....................... */
+
 
 .code-example {
   overflow: auto;
