feat: add video-player project

--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,10 @@ h1 {
   background-image: url("../media/project5.jpg");
 }
 
+.project-six {
+  background-image: url("../media/project6.jpg");
+}
+
 /* ....................... */
 
 
