--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,3 @@
-
 footer {
   margin-bottom: 30px;
 }
@@ -16,15 +15,12 @@ footer {
 .github_lg,
 .rss_lg,
 .date_footer {
-  margin: 0 15px;
+  margin: 0 10px;
 }
 
-.github_lg {
-  width: 30px;
-}
-
+.github_lg,
 .rss_lg {
-  width: 100px;
+  height: 25px;
 }
 
 .date_footer {
