--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,30 @@ h1 {
 
 /* ........................... */
 
+.skills-list {
+  list-style-type: none;
+  color: #5055ef;
+}
+
+.skills-item {
+  padding-left: 30px;
+  margin-bottom: 7px;
+  background-image: url("../media/flame.svg");
+  background-position-y: center;
+  background-size: 17px;
+  background-repeat: no-repeat;
+}
+
+.english {
+  margin-top: 15px;
+  color: #0404a5;
+  font-size: 20px;
+  background-size: 19px;
+  background-image: url("../media/english.svg");
+}
+
+/* ........................... */
+
 .project-wrap {
   display: flex;
   justify-content: space-evenly;
@@ -163,9 +187,6 @@ h1 {
   background-image: url("../media/project6.jpg");
 }
 
-/* ....................... */
-
-
 .code-example {
   overflow: auto;
 }
@@ -173,4 +194,13 @@ h1 {
 .code-item {
   width: 620px;
   margin: 0 auto;
+}
+
+/* ....................... */
+
+.certificate-ref,
+.graduation-project-ref {
+  font-size: 21px;
+  font-weight: 600;
+  color: #5055ef;
 }
