--- a/css/footer.css
+++ b/css/footer.css
@@ -2,34 +2,48 @@ footer {
   margin-bottom: 30px;
 }
 
-.footer-content {
+.footer-content,
+.footer-content-wrap {
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
+}
+
+.footer-content {
+  padding: 20px 0;
   border-top: 3px solid rgb(165, 165, 165);
 }
 
-.footer-content a {
+.footer-content-wrap {
+  margin: 0 auto;
+  transform: translateX(45px);
+}
+
+.footer-content-wrap a {
   transition: 0.4s;
 }
 
-.footer-content a:hover {
+.footer-content-wrap a:hover {
   opacity: 0.7;
 }
 
-.github_lg,
-.rss_lg,
+.github_ref,
 .date_footer {
-  margin: 0 10px;
+  margin-right: 15px;
 }
 
-.github_lg,
-.rss_lg {
+.github_img,
+.rss_img {
   height: 25px;
+  vertical-align: sub;
 }
 
 .date_footer {
   font-weight: 900;
+}
+
+.lang-switch {
+  background: transparent;
+  outline: none;
+  border-radius: 5px;
+  font-size: inherit;
 }
