--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,25 @@ h1 {
   background-image: url("../media/project6.jpg");
 }
 
+/* ....................... */
+
+.work-item {
+  margin: 18px 0;
+}
+
+.work-date,
+.work-name {
+  display: block;
+  font-weight: bold;
+}
+
+.work-project-ref,
+.work-project-tech {
+  margin: 0;
+}
+
+/* ....................... */
+
 .code-example {
   overflow: auto;
 }
@@ -197,6 +216,36 @@ h1 {
 }
 
 /* ....................... */
+.education-date,
+.education-direction {
+  display: block;
+}
+
+.education-date,
+.university {
+  font-weight: bold;
+}
+
+/* ....................... */
+
+.course-item {
+  margin: 18px 0;
+}
+
+.course-date,
+.course-name,
+.course-tech {
+  display: block;
+}
+
+.course-date,
+.course-institute {
+  font-weight: bold;
+}
+
+.course-name {
+  text-decoration: underline dashed rgb(91, 29, 190) 1px;
+}
 
 .certificate-ref,
 .graduation-project-ref {
