--- a/css/media-query.css
+++ b/css/media-query.css
@@ -105,8 +105,13 @@
     margin: 0 auto;
   }
 
-  .project-item:hover {
+  .footer-content {
+    justify-content: space-between;
+  }
+
+  .footer-content-wrap {
     transform: none;
+    margin: 0;
   }
 }
 
@@ -133,9 +138,11 @@
     top: 119px;
   }
 
-  .github_lg,
-  .rss_lg,
-  .date_footer {
-    margin: 0 10px;
+  .skills-list {
+    padding-left: 10px;
+  }
+
+  .lang-title {
+    display: none;
   }
 }
