--- a/css/settings.css
+++ b/css/settings.css
@@ -22,7 +22,7 @@ footer {
   box-sizing: border-box;
 }
 
-h2 {
+.section-title {
   padding-left: 10px;
   margin-top: 0;
   background-color: rgb(190, 184, 184);
@@ -33,8 +33,9 @@ h4 {
   margin: 0;
 }
 
-p {
-  line-height: 28px;
+p,
+span {
+  line-height: 30px;
 }
 
 .bg-color {
