feat: add some-porojects

--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,9 @@ h1 {
   background-image: url("../media/project6.jpg");
 }
 
+.project-seven {
+  background-image: url("../media/project7.png");
+}
 /* ....................... */
 
 .work-item {
