feat: add project art-quiz

--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,10 @@ h1 {
 .project-seven {
   background-image: url("../media/project7.png");
 }
+
+.project-eight {
+  background-image: url("../media/project8.png");
+}
 /* ....................... */
 
 .work-item {
