refacotr: image optimization

--- a/css/main.css
+++ b/css/main.css
@@ -188,11 +188,11 @@ h1 {
 }
 
 .project-seven {
-  background-image: url("../media/project7.png");
+  background-image: url("../media/project7.jpg");
 }
 
 .project-eight {
-  background-image: url("../media/project8.png");
+  background-image: url("../media/project8.jpg");
 }
 /* ....................... */
 
