--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,15 @@
-.nav-container{
-  position: relative;
+.header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 99;
 }
 
-header {
-  margin-top: 30px;
+.header-shadow {
+  box-shadow: 0 2px 10px rgb(61 44 44 / 50%);
 }
 
-nav {
+.nav {
   border-bottom: 1px solid;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
@@ -14,39 +17,35 @@ nav {
   transition: 0.4s;
 }
 
-.nav-header {
+.nav__title {
   display: none;
   margin: 15px 0 10px 5px;
   color: #0000005c;
 }
 
-.nav-hidden {
- top: 86px;
- opacity: 1;
-}
-
-.bg-nav {
-  background-color: beige;
-}
-
-.nav-items {
+.nav__items {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 10px 0;
+  padding: 25px 0;
+  margin: 0;
 }
 
-.nav-item {
+.nav__item {
   list-style: none;
 }
 
-.nav-item a {
+.nav__link {
   padding: 5px 0;
   text-decoration: none;
   color: black;
   transition: 0.4s;
 }
 
-.nav-item a:hover {
+.nav__link:hover {
   color: rgb(255, 145, 0);
+}
+
+.nav--bg {
+  background-color: beige;
 }
