--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  z-index: 9;
+  z-index: 5;
 }
 
 .projects-item__description {
@@ -287,4 +287,10 @@
 .certificate-ref:hover,
 .graduation-project-ref:hover {
   opacity: 0.7;
+}
+
+section,
+.contacts {
+  padding-top: 75px;
+  margin-top: -75px;
 }
