--- a/css/media-query.css
+++ b/css/media-query.css
@@ -1,12 +1,10 @@
 @media all and (max-width: 915px) {
-  body {
-    overflow: hidden;
-  }
-
   .nav {
     position: absolute;
-    top: 110px;
-    right: -230px;
+    top: 85px;
+    left: 0;
+    z-index: 20;
+    transform: translateX(-98.5%);
     padding: 5px 45px 15px;
     background: rgb(248 201 80 / 85%);
     border-bottom: none;
@@ -14,7 +12,7 @@
   }
 
   .nav--show {
-    right: 0;
+    transform: translateX(0);
   }
 
   .nav__title {
@@ -50,12 +48,12 @@
   .title-and-burger {
     position: sticky;
     top: 0;
-    padding-top: 10px;
-    padding-bottom: 20px;
-    margin: 20px 0;
+    z-index: 10;
+    padding-top: 0;
+    padding-bottom: 10px;
+    margin: 10px 0;
     border-bottom: 3px solid rgb(165, 165, 165);
     background-color: inherit;
-    z-index: 9;
   }
 
   .title {
@@ -65,6 +63,14 @@
 
   .burger {
     display: block;
+  }
+
+  /* .............. */
+
+  section,
+  .contacts {
+    padding-top: 60px;
+    margin-top: -60px;
   }
 }
 
@@ -104,6 +110,10 @@
     width: 270px;
     height: 180px;
   }
+
+  .footer {
+    padding: 10px;
+  }
 }
 
 @media all and (max-width: 640px) {
@@ -121,6 +131,7 @@
 
   .footer {
     justify-content: space-between;
+    padding: 10px;
   }
 
   .footer__content {
@@ -129,24 +140,23 @@
   }
 }
 
-/* @media all and (max-width: 438px) {
+@media all and (max-width: 418px) {
   .nav {
-    left: 0;
+    top: 135px;
   }
 
-  .nav--show {
-    top: 127px;
+  section,
+  .contacts {
+    padding-top: 100px;
+    margin-top: -100px;
   }
-} */
+}
 
 @media all and (max-width: 360px) {
   p {
     line-height: 26px;
   }
 
-  /* .nav--show {
-    top: 119px;
-  } */
 
   .title {
     font-size: 30px;
