refactor: change styel and content

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -135,9 +135,13 @@
   }
 }
 
-@media all and (max-width: 418px) {
+@media all and (max-width: 429px) {
   .nav {
     top: 135px;
+  }
+
+  .code-item {
+    height: 370px;
   }
 
   .title-and-burger {
