--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
   display: block;
   width: 45px;
   height: 9px;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: 0.4s;
   background-color: rgb(153 2 2);
 }
@@ -240,8 +240,19 @@
   overflow: auto;
 }
 
+.code-example::-webkit-scrollbar {
+  height: 7px;
+  border-radius: 3px;
+  background-color: rgb(194, 194, 194);
+}
+
+.code-example::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: rgb(248 201 80 / 85%);
+}
+
 .code-item {
-  width: 620px;
+  width: 650px;
   margin: 0 auto;
 }
 
