feat: add tic-tac-toe-game project

--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,10 @@
   background-image: url("../media/project8.jpg");
 }
 
+.projects-item--nine {
+  background-image: url("../media/project9.jpg");
+}
+
 /* ...................work..................... */
 
 .work-item {
