--- a/css/settings.css
+++ b/css/settings.css
@@ -23,7 +23,7 @@ body {
 /* .......... */
 .section-title {
   padding-left: 10px;
-  margin-top: 0;
+  margin-top: 20px;
   background-color: rgb(190, 184, 184);
 }
 
